--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.MOUNT_FORMAT_FILESYSTEMS" />
 
     <application
         android:allowBackup="true"
@@ -25,135 +28,150 @@
         <service
             android:name=".TestService"
             android:enabled="true"
-            android:exported="true"></service>
-
-        <!-- <activity android:name=".TestActivity">
-             <intent-filter>
-                 <category android:name="android.intent.category.DEFAULT" />
-             </intent-filter>
-             <intent-filter>
-                 <action android:name="android.intent.action.VIEW"></action>
-                 <category android:name="android.intent.category.DEFAULT"></category>
-                 <data android:mimeType="audio/x-mpeg"></data>
-             </intent-filter>
-         </activity>
+            android:exported="true" />
 
 
-         &lt;!&ndash;相互唤醒，失败&ndash;&gt;
-         <service
-             android:name=".protectservice.main.MainService"
-             android:enabled="true"
-             android:exported="true" />
-
-         <receiver android:name=".protectservice.main.MainReceiver" />
-
-         <service
-             android:name=".protectservice.assist.AssistService"
-             android:enabled="true"
-             android:exported="true"
-             android:process=":assist" />
-
-         <receiver
-             android:name=".protectservice.assist.AssistReceiver"
-             android:process=":assist">
-             <intent-filter>
-                 <action android:name="android.intent.action.BOOT_COMPLETED" />&lt;!&ndash;开机&ndash;&gt;
-                 <action android:name="android.intent.action.USER_PRESENT" />&lt;!&ndash;解锁屏幕&ndash;&gt;
-                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />&lt;!&ndash;电源&ndash;&gt;
-                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                 <action android:name="android.intent.action.BATTERY_CHANGED" />&lt;!&ndash;电池&ndash;&gt;
-                 <action android:name="android.intent.action.BATTERY_OKAY" />
-                 <action android:name="android.intent.action.BATTERY_LOW" />
-                 <action android:name="android.intent.action.WALLPAPER_CHANGED" />&lt;!&ndash;壁纸&ndash;&gt;
-                 <action android:name="android.intent.action.AIRPLANE_MODE" />&lt;!&ndash;飞行模式&ndash;&gt;
-                 <action android:name="android.intent.action.TIMEZONE_CHANGED" />&lt;!&ndash;时间设置&ndash;&gt;
-                 <action android:name="android.intent.action.TIME_SET" />
-                 <action android:name="android.intent.action.HEADSET_PLUG" />&lt;!&ndash;耳机  无效&ndash;&gt;
-             </intent-filter>
-         </receiver>
-
-         &lt;!&ndash;前台服务，失败&ndash;&gt;
-         <service
-             android:name=".foregroundservice.ForeService"
-             android:enabled="true"
-             android:exported="true"
-             android:process=":fore" />
+        <activity android:name=".TestActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <data android:mimeType="audio/x-mpeg"></data>
+            </intent-filter>
+        </activity>
 
 
+        <!--相互唤醒策略
+        <service
+            android:name=".protectservice.main.MainService"
+            android:enabled="true"
+            android:exported="true" />
 
-         &lt;!&ndash;辅助功能，有点效果&ndash;&gt;
-         <service
-             android:name=".accessibility.MAccessibilityService"
-             android:label="@string/accessibility_service_label"
-             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-             android:process=":assist">
-             <intent-filter>
-                 <action android:name="android.accessibilityservice.AccessibilityService" />
-             </intent-filter>
-             <meta-data
-                 android:name="android.accessibilityservice"
-                 android:resource="@xml/accessibility_config" />
-         </service>
+        <receiver android:name=".protectservice.main.MainReceiver" />
 
-         &lt;!&ndash;闹铃通知&ndash;&gt;
-         <receiver android:name=".alarm.AlarmReceiver">
-             <intent-filter>
-                 <action android:name="audio_receiver" />
-                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
-                 <action android:name="android.intent.action.USER_PRESENT" />&lt;!&ndash;解锁屏幕&ndash;&gt;
-                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />&lt;!&ndash;电源&ndash;&gt;
-                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                 <action android:name="android.intent.action.BATTERY_CHANGED" />&lt;!&ndash;电池&ndash;&gt;
-                 <action android:name="android.intent.action.BATTERY_OKAY" />
-                 <action android:name="android.intent.action.WALLPAPER_CHANGED" />&lt;!&ndash;壁纸&ndash;&gt;
-                 <action android:name="android.intent.action.DATE_CHANGED" />
-                 <action android:name="android.intent.action.TIMEZONE_CHANGED" />&lt;!&ndash;时间设置&ndash;&gt;
-                 <action android:name="android.intent.action.TIME_SET" />
-                 <action android:name="android.intent.action.TIME_TICK" />
-             </intent-filter>
-         </receiver>-->
+        <service
+            android:name=".protectservice.assist.AssistService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":assist" />
 
+        <receiver
+            android:name=".protectservice.assist.AssistReceiver"
+            android:process=":assist">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />&lt;!&ndash;开机&ndash;&gt;
+                <action android:name="android.intent.action.USER_PRESENT" />&lt;!&ndash;解锁屏幕&ndash;&gt;
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />&lt;!&ndash;电源&ndash;&gt;
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.BATTERY_CHANGED" />&lt;!&ndash;电池&ndash;&gt;
+                <action android:name="android.intent.action.BATTERY_OKAY" />
+                <action android:name="android.intent.action.BATTERY_LOW" />
+                <action android:name="android.intent.action.WALLPAPER_CHANGED" />&lt;!&ndash;壁纸&ndash;&gt;
+                <action android:name="android.intent.action.AIRPLANE_MODE" />&lt;!&ndash;飞行模式&ndash;&gt;
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />&lt;!&ndash;时间设置&ndash;&gt;
+                <action android:name="android.intent.action.TIME_SET" />
+                <action android:name="android.intent.action.HEADSET_PLUG" />&lt;!&ndash;耳机  无效&ndash;&gt;
+            </intent-filter>
+        </receiver>
 
-        <!-- <receiver android:name=".widget.MWidget">
-             <intent-filter>
-                 <action android:name="test_aaa" />
-                 <action android:name="test_common" />
-                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                 <action android:name="android.intent.action.USER_PRESENT" />
-                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-
-                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-                 <action android:name="MWidget_click" />
-                 />
-             </intent-filter>
-             <meta-data
-                 android:name="android.appwidget.provider"
-                 android:resource="@xml/widget_test" />
-         </receiver>
-
-         <receiver android:name=".widget.MAssistReceiver">
-             <intent-filter>
-                 <action android:name="test_common" />
-                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                 <action android:name="android.intent.action.USER_PRESENT" />
-                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
-                 <action android:name="android.intent.action.BATTERY_CHANGED" />
-                 <action android:name="android.intent.action.BATTERY_OKAY" />
-                 <action android:name="android.intent.action.DATE_CHANGED" />
-                 <action android:name="android.intent.action.TIMEZONE_CHANGED" />
-                 <action android:name="android.intent.action.TIME_SET" />
-                 <action android:name="android.intent.action.TIME_TICK" />
-             </intent-filter>
-         </receiver>-->
+        &lt;!&ndash;前台服务策略&ndash;&gt;
+        <service
+            android:name=".foregroundservice.ForeService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":fore" />
 
 
+        &lt;!&ndash;辅助功能，有点效果&ndash;&gt;
+        <service
+            android:name=".accessibility.MAccessibilityService"
+            android:label="@string/accessibility_service_label"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:process=":assist">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_config" />
+        </service>
 
+        &lt;!&ndash;闹铃通知&ndash;&gt;
+        <receiver android:name=".alarm.AlarmReceiver">
+            <intent-filter>
+                <action android:name="audio_receiver" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="android.intent.action.USER_PRESENT" />&lt;!&ndash;解锁屏幕&ndash;&gt;
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />&lt;!&ndash;电源&ndash;&gt;
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.BATTERY_CHANGED" />&lt;!&ndash;电池&ndash;&gt;
+                <action android:name="android.intent.action.BATTERY_OKAY" />
+                <action android:name="android.intent.action.WALLPAPER_CHANGED" />&lt;!&ndash;壁纸&ndash;&gt;
+                <action android:name="android.intent.action.DATE_CHANGED" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />&lt;!&ndash;时间设置&ndash;&gt;
+                <action android:name="android.intent.action.TIME_SET" />
+                <action android:name="android.intent.action.TIME_TICK" />
+            </intent-filter>
+        </receiver>
+
+        &lt;!&ndash;小组件策略&ndash;&gt;
+        <receiver android:name=".widget.MWidget">
+            <intent-filter>
+                <action android:name="test_aaa" />
+                <action android:name="test_common" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="MWidget_click" />
+                />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_test" />
+        </receiver>
+
+        <receiver android:name=".widget.MAssistReceiver">
+            <intent-filter>
+                <action android:name="test_common" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="android.intent.action.BATTERY_CHANGED" />
+                <action android:name="android.intent.action.BATTERY_OKAY" />
+                <action android:name="android.intent.action.DATE_CHANGED" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.TIME_SET" />
+                <action android:name="android.intent.action.TIME_TICK" />
+            </intent-filter>
+        </receiver>-->
+
+        <!--刷入系统应用策略-->
+
+        <receiver android:name=".root.Rooted_Receiver">
+            <intent-filter>
+                <action android:name="rooted" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.TIME_TICK" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".root.Rooted_Service">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
