应用层的守护进程，全线失败。只能考虑root，加入清理白名单，对于强度不高的系统使用accessibility

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,43 @@
         </activity>
 
 
-        <!--相互唤醒策略
-        <service
+        <!--*****************有效途径*********************************************************************-->
+
+        <!--彩笔乐视有效，其余无效-->
+        <!--<service
+            android:name=".accessibility.MAccessibilityService"
+            android:label="@string/accessibility_service_label"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:process=":assist">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_config" />
+        </service>-->
+
+        <!--系统应用策略，小米开发有效，魅族假root无效-->
+        <!--<receiver
+            android:name=".root.Rooted_Receiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="rooted" />
+                <action android:name="simulateBOOT" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.TIME_TICK" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".root.Rooted_Service"></service>-->
+
+
+        <!--*****************无效途径*********************************************************************-->
+        <!--相互唤醒策略，无效-->
+        <!--<service
             android:name=".protectservice.main.MainService"
             android:enabled="true"
             android:exported="true" />
@@ -61,75 +96,32 @@
             android:name=".protectservice.assist.AssistReceiver"
             android:process=":assist">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />&lt;!&ndash;开机&ndash;&gt;
-                <action android:name="android.intent.action.USER_PRESENT" />&lt;!&ndash;解锁屏幕&ndash;&gt;
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />&lt;!&ndash;电源&ndash;&gt;
+                <action android:name="android.intent.action.BOOT_COMPLETED" />;
+                <action android:name="android.intent.action.USER_PRESENT" />;
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />;
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.BATTERY_CHANGED" />&lt;!&ndash;电池&ndash;&gt;
+                <action android:name="android.intent.action.BATTERY_CHANGED" />;
                 <action android:name="android.intent.action.BATTERY_OKAY" />
                 <action android:name="android.intent.action.BATTERY_LOW" />
-                <action android:name="android.intent.action.WALLPAPER_CHANGED" />&lt;!&ndash;壁纸&ndash;&gt;
-                <action android:name="android.intent.action.AIRPLANE_MODE" />&lt;!&ndash;飞行模式&ndash;&gt;
-                <action android:name="android.intent.action.TIMEZONE_CHANGED" />&lt;!&ndash;时间设置&ndash;&gt;
+                <action android:name="android.intent.action.WALLPAPER_CHANGED" />;
+                <action android:name="android.intent.action.AIRPLANE_MODE" />;
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />;
                 <action android:name="android.intent.action.TIME_SET" />
-                <action android:name="android.intent.action.HEADSET_PLUG" />&lt;!&ndash;耳机  无效&ndash;&gt;
+                <action android:name="android.intent.action.HEADSET_PLUG" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
 
-        &lt;!&ndash;前台服务策略&ndash;&gt;
-        <service
-            android:name=".foregroundservice.ForeService"
-            android:enabled="true"
-            android:exported="true"
-            android:process=":fore" />
-
-
-        &lt;!&ndash;辅助功能，有点效果&ndash;&gt;
-        <service
-            android:name=".accessibility.MAccessibilityService"
-            android:label="@string/accessibility_service_label"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:process=":assist">
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
-            </intent-filter>
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_config" />
-        </service>
-
-        &lt;!&ndash;闹铃通知&ndash;&gt;
-        <receiver android:name=".alarm.AlarmReceiver">
-            <intent-filter>
-                <action android:name="audio_receiver" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.MEDIA_MOUNTED" />
-                <action android:name="android.intent.action.USER_PRESENT" />&lt;!&ndash;解锁屏幕&ndash;&gt;
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />&lt;!&ndash;电源&ndash;&gt;
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.BATTERY_CHANGED" />&lt;!&ndash;电池&ndash;&gt;
-                <action android:name="android.intent.action.BATTERY_OKAY" />
-                <action android:name="android.intent.action.WALLPAPER_CHANGED" />&lt;!&ndash;壁纸&ndash;&gt;
-                <action android:name="android.intent.action.DATE_CHANGED" />
-                <action android:name="android.intent.action.TIMEZONE_CHANGED" />&lt;!&ndash;时间设置&ndash;&gt;
-                <action android:name="android.intent.action.TIME_SET" />
-                <action android:name="android.intent.action.TIME_TICK" />
-            </intent-filter>
-        </receiver>
-
-        &lt;!&ndash;小组件策略&ndash;&gt;
-        <receiver android:name=".widget.MWidget">
+        <!--小组件策略，基本无效-->
+        <!--<receiver android:name=".widget.MWidget">
             <intent-filter>
                 <action android:name="test_aaa" />
                 <action android:name="test_common" />
+                <action android:name="MWidget_click" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-                <action android:name="MWidget_click" />
                 />
             </intent-filter>
             <meta-data
@@ -142,36 +134,56 @@
                 <action android:name="test_common" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>-->
+
+        <!--nls策略，整体无效，傻的死死的-->
+        <!--<service
+            android:name=".NLService.NListenerService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+            android:process=":remote_NLS">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+
+        <receiver
+            android:name=".NLService.NLSReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="test_nls" />
+            </intent-filter>
+        </receiver>-->
+        <!--前台服务策略，无效-->
+        <!--<service
+            android:name=".foregroundservice.ForeService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":fore" />-->
+
+        <!--闹铃通知,无效-->
+        <!--<receiver android:name=".alarm.AlarmReceiver">
+            <intent-filter>
+                <action android:name="audio_receiver" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
-                <action android:name="android.intent.action.BATTERY_CHANGED" />
+                <action android:name="android.intent.action.USER_PRESENT" />;
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />;
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.BATTERY_CHANGED" />;
                 <action android:name="android.intent.action.BATTERY_OKAY" />
+                <action android:name="android.intent.action.WALLPAPER_CHANGED" />;
                 <action android:name="android.intent.action.DATE_CHANGED" />
-                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />;
                 <action android:name="android.intent.action.TIME_SET" />
                 <action android:name="android.intent.action.TIME_TICK" />
             </intent-filter>
         </receiver>-->
 
-        <!--刷入系统应用策略-->
-
-        <receiver
-            android:name=".root.Rooted_Receiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="rooted" />
-                <action android:name="simulateBOOT" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.TIME_TICK" />
-                <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
-            </intent-filter>
-        </receiver>
-        <service android:name=".root.Rooted_Service"></service>
     </application>
 
 </manifest>
